--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@tiptap/extension-text-style": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/vue-3": "^2.12.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
