--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@pinia/nuxt": "^0.5.5",
     "@tiptap/extension-color": "^2.23.1",
     "@tiptap/extension-link": "^2.23.1",
+    "@tiptap/extension-table": "^2.25.0",
+    "@tiptap/extension-table-cell": "^2.25.0",
+    "@tiptap/extension-table-header": "^2.25.0",
+    "@tiptap/extension-table-row": "^2.25.0",
     "@tiptap/extension-text-style": "^2.23.1",
     "@tiptap/starter-kit": "^2.23.1",
     "@tiptap/vue-3": "^2.23.1",
