--- a/vercel.json
+++ b/vercel.json
@@ -37,6 +37,10 @@
         {
           "key": "Content-Type",
           "value": "application/xml"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "max-age=0, s-maxage=600, stale-while-revalidate=86400"
         }
       ]
     },
@@ -46,6 +50,10 @@
         {
           "key": "Content-Type",
           "value": "application/xml"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "max-age=0, s-maxage=600, stale-while-revalidate=86400"
         }
       ]
     }
