--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-vue": "^0.10.7",
     "@nuxt/image": "^1.10.0",
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/i18n": "^9.2.0",
